Terraform-Assignment/modules/Web_SecurityGroup/main.tf
resource "aws_security_group" "Web_SecurityGroup" {
  name        = "Web_SecurityGroup"
  description = "Allow inbound traffic from HTTP 80 and SSH 22 "
  vpc_id      = var.vpc_id

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    name = "${var.env_prefix}-SecurityGroup"
  }
}
